[package]
name = "pgen"
version = "1.5.0"
edition = "2024"
authors = ["Vikram Sharma"]
rust-version = "1.85"
description = "Cryptographically random password, UUID, TypeID, ULID, NanoID, and KSUID generator"
repository = "https://github.com/sharma-vikram/pgen"
keywords = ["password", "generator", "cli", "cryptography", "ksuid"]
categories = ["command-line-utilities", "cryptography"]
license = "MIT"

[dependencies]
rand = { version = "0.10.0", features = ["std", "std_rng"] }
clap = { version = "4.5.60", features = ["derive"] }
anyhow = "1.0.102"
zeroize = "1.8.2"

[profile.release]
strip = true
opt-level = "z"
codegen-units = 1
lto = true
panic = "abort"
overflow-checks = true

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
multiple_crate_versions = "allow" # getrandom's WASI target graph pulls wasip2/wasip3 which currently resolve to wit-bindgen 0.46 and 0.51